[package]
name = "ttschnz"
version = "0.1.0"
edition = "2021"
lib = "ttschnz"

[[bin]]
name = "ttschnz"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
itertools = "0.8.0"
regex = "1.8.2"
terminal_size = "0.2.6"
clearscreen = { version = "2.0.1", features = ["windows-console"] }
