[package]
name = "ttschnz"
version = "0.1.0"
edition = "2021"
lib = "ttschnz"

[[bin]]
name = "ttschnz"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
itertools = "0.8.0"
regex = "1.8.2"
colored = "2.0.0"
ascii_table = "4.0.2"
